# to-be-decided

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  flake.nix  index.html  macroquad-template.wasm  style.css  to-be-decided.wasm
.github/workflows/: deploy.yaml
assets/: events.json  laws.json  mails.json  map.json  news.json
site/: index.html
src/: effect.rs  event.rs  law.rs  main.rs  market.rs  modifier.rs  player.rs  shaders.rs  state.rs  style.rs
src/component/: botnet.rs  market.rs  mod.rs  news.rs  parlament.rs
src/shader/: crt_shader.frag  mod.rs
