[package]
name = "to-be-decided"
version = "0.1.0"
edition = "2024"
description = "macroquad template for our gamejam's"
repository = "https://github.com/Geldwaschbär/raylib-wasm-template.git"
license = "MIT"

[dependencies]
macroquad = "0.4.14"
serde = { version = "1.0.228", features = ["derive", "rc"] }
serde_json = "1.0.145"
